fix(css): modif police, ajout overflow, padding fix(js): ajout class ingredient, modif class recipesTitle feature(js): function troncInstrcution fix(json): g a la place de grammes

--- a/style/petits_Plats_Style.scss
+++ b/style/petits_Plats_Style.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 /*-------------logo------------------*/
@@ -59,6 +59,7 @@ align-items: center;
     margin: 23px;
     padding-left: 0;
     padding-right: 0;
+    overflow: hidden;
   }
   .card-img-top{
     height: 170px;
@@ -66,32 +67,41 @@ align-items: center;
   .card-body{
       height: 190px;
       background-color: blue;
+      padding: 0;
+      padding-left: 20px;
+      padding-right: 20px;
+      max-height:199px ;
+      overflow: hidden;
   }
   .firstPartieCard{
     display: grid;
-    grid-template-columns: 7fr 2fr;
+        grid-template-columns: 85fr 35fr;
       font-size: 15px;
       background-color: violet;
-      padding-bottom: 3px;
+      padding-top: 25px;
+      padding-bottom: 25px;
        }
      .secondPartieCard{
        font-size: 11px;
       display: grid;
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 2fr 3fr;
      }
   .timing{
+    font-family: "Open Sans", 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 18px;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: flex-end;
       align-items: center;
       flex-wrap: nowrap;
   }
- .far{
-      padding-right: 6px;
-  }
+ 
     .ingredients{
     background-color: red;
-    font-size: 9px;
+    font-family: "Open Sans", 'Times New Roman', Times, serif;
+    max-height: 120px;
+   font-size: 11px;
   & ul{
 list-style-type: none;
 padding:0;
@@ -99,5 +109,24 @@ padding:0;
   }
   .instruction{
     background-color: yellow;
-    font-size: 9px;
+    font-family: "roboto", 'Times New Roman', Times, serif;
+    max-height: 120px;
+    padding-left: 20px;
+    font-size: 12px;
+  height: 140px;
+
+  }
+  .recipesTitle{
+    font-family: "roboto", 'Times New Roman', Times, serif;
+    font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+    }
+  .nameIngredient{
+    font-weight: bold;
+  }
+  li{
+    line-height: 1.2;
   }
